--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "asiedu",
         "firstname",
+        "sqft",
         "tseslint"
     ],
     "cSpell.ignoreWords": [
