angular.json file updated

--- a/angular.json
+++ b/angular.json
@@ -44,12 +44,12 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kB",
-                  "maximumError": "5MB"
+                  "maximumError": "1MB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kB",
-                  "maximumError": "4kB"
+                  "maximumWarning": "15KB",  
+                  "maximumError": "3MB"  
                 }
               ],
               "outputHashing": "all"
